--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,75 @@
 {
-  "name": "magicsunday/gedcom-parser",
-  "description": "A GEDCOM 5.5.1 file parser",
-  "license": "GPL-3.0-or-later",
-  "type": "library",
-  "homepage": "http://github.com/magicsunday/gedcom-parser",
-  "keywords": [
-    "gedcom",
-    "parser"
-  ],
-  "authors": [
-    {
-      "name": "Rico Sonntag",
-      "email": "mail@ricosonntag.de",
-      "homepage": "https://ricosonntag.de",
-      "role": "Developer"
+    "name": "magicsunday/gedcom-parser",
+    "description": "A GEDCOM 5.5.1 file parser",
+    "license": "GPL-3.0-or-later",
+    "type": "library",
+    "homepage": "https://github.com/magicsunday/gedcom-parser",
+    "keywords": [
+        "gedcom",
+        "parser"
+    ],
+    "authors": [
+        {
+            "name": "Rico Sonntag",
+            "email": "mail@ricosonntag.de",
+            "homepage": "https://ricosonntag.de",
+            "role": "Developer"
+        }
+    ],
+    "config": {
+        "bin-dir": ".build/bin",
+        "vendor-dir": ".build/vendor",
+        "discard-changes": true,
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "require": {
+        "php": ">=7.4.0 <8.4.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.50",
+        "overtrue/phplint": "^3.4 || ^9.0",
+        "phpunit/phpunit": "^9.0 || ^10.0 || ^11.0",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "rector/rector": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "MagicSunday\\Gedcom\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MagicSunday\\Gedcom\\Test\\": "test/"
+        }
+    },
+    "scripts": {
+        "ci:test:php:lint": [
+            "phplint"
+        ],
+        "ci:test:php:phpstan": [
+            "phpstan analyze"
+        ],
+        "ci:test:php:phpstan:baseline": [
+            "phpstan analyze --generate-baseline phpstan-baseline.neon --allow-empty-baseline"
+        ],
+        "ci:test:php:rector": [
+            "rector process --config rector.php --dry-run"
+        ],
+        "ci:test:php:unit": [
+            "phpunit"
+        ],
+        "ci:cgl": [
+            "php-cs-fixer fix --diff --verbose"
+        ],
+        "ci:test": [
+            "@ci:test:php:lint",
+            "@ci:test:php:phpstan",
+            "@ci:test:php:rector",
+            "@ci:test:php:unit"
+        ]
     }
-  ],
-  "autoload": {
-    "psr-4": {
-      "MagicSunday\\Gedcom\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "MagicSunday\\Gedcom\\Test\\": "test/"
-    }
-  },
-  "require": {
-    "php": "~7.0",
-    "psr/log": "~1.0.0"
-  },
-  "require-dev": {
-    "phpunit/PHPUnit": "~6.0"
-  }
 }
