--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "optimize-autoloader": true
     },
     "require": {
-        "php": ">=7.4.0 <8.4.0"
+        "php": ">=7.4.0 <8.4.0",
+        "psr/http-factory": "^1.0",
+        "psr/http-message": "^1.0 || ^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.50",
